--- a/work.html
+++ b/work.html
@@ -15,20 +15,28 @@
       --bezier:cubic-bezier(.22,.61,.36,1);
     }
 
+    /* Force a single, solid background (no gradient seam) */
+    html, body{
+      background:#f7f8fc !important;
+      background-image:none !important;
+    }
+
     /* Top bar */
-    .nav{position:sticky;top:0;z-index:50;background:linear-gradient(180deg,rgba(255,255,255,.78),rgba(255,255,255,.58));backdrop-filter:saturate(1.2) blur(8px);border-bottom:1px solid rgba(17,24,39,.06)}
+    .nav{position:sticky;top:0;z-index:50;background:rgba(255,255,255,.84);backdrop-filter:saturate(1.2) blur(8px);border-bottom:1px solid rgba(17,24,39,.06)}
     .nav-inner{display:flex;align-items:center;gap:12px;padding:10px 0}
     .brand{font-weight:900;letter-spacing:.08em;text-decoration:none;color:#111}
     .btn{padding:8px 14px;border-radius:999px;background:#f3f4f6;text-decoration:none;color:#0f172a;font-weight:600;box-shadow:inset 0 0 0 1px rgba(17,24,39,.08)}
     .nav-links{margin-left:auto;display:flex;gap:10px;flex-wrap:wrap}
 
-    .page{padding:32px 16px;}
+    .page{padding:20px 16px 32px;} /* was 32px top → tightened */
     .narrow{width:min(680px,92vw);margin-inline:auto;}
     .wide{width:min(1200px,96vw);margin-inline:auto;}
     .section-title{font-size:22px;margin:26px 0 14px;color:var(--title);font-weight:700;letter-spacing:.2px}
+    /* pull the first title up directly under Snoopy */
+    .hero + .narrow .section-title:first-child{margin-top:8px;}
 
-    /* Snoopy hero (smaller, Daniel-style intro) */
-    .hero{display:grid;place-items:center;margin:18px 0 8px}
+    /* Snoopy hero (small + centered, Daniel-style) */
+    .hero{display:grid;place-items:center;margin:6px 0 0} /* tighter */
     .snoopy{width:min(200px,42vw);height:auto;display:block;border-radius:18px;filter:drop-shadow(0 12px 28px rgba(17,19,24,.16))}
     .intro{margin-top:10px;text-align:center}
     .intro h1{margin:8px 0 6px;font-size:24px}
@@ -51,7 +59,7 @@
     @media (max-width:560px){ .role{display:none;} }
 
     /* ===== Projects ===== */
-    .projects{margin-top:48px;}
+    .projects{margin-top:36px;} /* keep a little breathing room */
     .kicker{margin-top:-2px;color:var(--muted);font-size:13px}
     .panels{display:flex;flex-direction:column;gap:46px;}
 
@@ -116,7 +124,7 @@
     .lb-left{padding:14px;display:grid;grid-template-rows:auto auto}
     .lb-stage{background:#fff;border-radius:12px;border:1px solid var(--bd);display:grid;place-items:center;
       position:relative;overflow:hidden;height:min(78vh,760px)}
-    .lb-stage canvas,.lb-stage img{max-width:100%;max-height:100%;object-fit:contain;opacity:0;transition:opacity .2s ease} /* contain in overlay */
+    .lb-stage canvas,.lb-stage img{max-width:100%;max-height:100%;object-fit:contain;opacity:0;transition:opacity .2s ease}
     .lb-stage canvas.show,.lb-stage img.show{opacity:1}
     .navbtn{position:absolute;top:50%;transform:translateY(-50%);background:rgba(17,24,39,.75);color:#fff;border:none;border-radius:999px;width:34px;height:34px;display:grid;place-items:center;cursor:pointer}
     .navbtn.left{left:10px}.navbtn.right{right:10px}
@@ -454,7 +462,6 @@
     document.getElementById('y').textContent = new Date().getFullYear();
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
 
-    /* ---------- helpers ---------- */
     function viewportBounds(el){ const vp = el.querySelector('.viewport') || el; return { w: vp.clientWidth, h: vp.clientHeight }; }
     function setIndicator(el, txt){ el.textContent = txt; }
 
@@ -474,7 +481,6 @@
       });
     }
 
-    /* image fallbacks: "A.JPG|A.jpg" -> pick first that loads */
     function pick(paths, cb){
       const list=(paths||"").split('|').map(s=>s.trim()).filter(Boolean);
       if(!list.length){ cb(""); return; }
@@ -500,7 +506,6 @@
       });
     }
 
-    /* ---------- Deck (single PDF) ---------- */
     function wirePdfSingle(deck){
       const file = deck.dataset.src;
       const canvas = deck.querySelector('.pdf-canvas');
@@ -527,13 +532,12 @@
       document.addEventListener('keydown',e=>{ if(!hover) return; if(e.key==='ArrowRight'){e.preventDefault();go(1)} if(e.key==='ArrowLeft'){e.preventDefault();go(-1)} });
       prev.addEventListener('click',e=>{ e.stopPropagation(); go(-1); });
       next.addEventListener('click',e=>{ e.stopPropagation(); go(1); });
-      deck.addEventListener('click',()=> openLBPdf(deck.dataset.title,file,page,total)); // click anywhere to open
+      deck.addEventListener('click',()=> openLBPdf(deck.dataset.title,file,page,total));
 
       window.addEventListener('resize',render);
       pdfjsLib.getDocument(file).promise.then(p=>{ pdf=p; total=p.numPages; render(); });
     }
 
-    /* ---------- Deck (merged PDFs) ---------- */
     function wirePdfMerged(deck){
       const files = deck.dataset.srcs.split('|').map(s=>s.trim());
       const canvas = deck.querySelector('.pdf-canvas');
@@ -566,7 +570,7 @@
       document.addEventListener('keydown',e=>{ if(!hover) return; if(e.key==='ArrowRight'){e.preventDefault();step(1)} if(e.key==='ArrowLeft'){e.preventDefault();step(-1)} });
       prev.addEventListener('click',e=>{ e.stopPropagation(); step(-1); });
       next.addEventListener('click',e=>{ e.stopPropagation(); step(1); });
-      deck.addEventListener('click',()=> openLBPdfMerged(deck.dataset.title, files, absIndex(), total, pagesPer)); // click anywhere to open
+      deck.addEventListener('click',()=> openLBPdfMerged(deck.dataset.title, files, absIndex(), total, pagesPer));
 
       window.addEventListener('resize',render);
       Promise.all(files.map(f=>pdfjsLib.getDocument(f).promise)).then(arr=>{
@@ -575,7 +579,6 @@
       });
     }
 
-    /* ---------- Image gallery ---------- */
     function wireGallery(gal){
       const raw = gal.dataset.images.split(',').map(s=>s.trim());
       const imgEl = gal.querySelector('.gallery-img');
@@ -608,11 +611,10 @@
       prev.addEventListener('click',e=>{ e.stopPropagation(); go(-1); });
       next.addEventListener('click',e=>{ e.stopPropagation(); go(1); });
 
-      // open lightbox on click
       gal.addEventListener('click',()=> openLBImages(gal.dataset.title, imgs, i));
     }
 
-    /* ---------- Lightbox (overlay) ---------- */
+    /* ---------- Lightbox ---------- */
     const LB = document.getElementById('lightbox');
     const LB_CLOSE = document.getElementById('lbClose');
     const LB_TITLE = document.getElementById('lbTitle');
@@ -629,6 +631,14 @@
 
     function lbOpen(){ LB.classList.add('open'); LB.setAttribute('aria-hidden','false'); }
     function lbClose(){ LB.classList.remove('open'); LB.setAttribute('aria-hidden','true'); LB_IMG.src=''; LB_IMG.classList.remove('show'); LB_CANVAS.classList.remove('show'); LB_THUMBS.innerHTML=''; }
+    document.getElementById('lbClose').addEventListener('click',lbClose);
+    LB.addEventListener('click',e=>{ if(e.target===LB) lbClose(); });
+    document.addEventListener('keydown',e=>{
+      if(!LB.classList.contains('open')) return;
+      if(e.key==='Escape') lbClose();
+      if(e.key==='ArrowLeft') lbGo(-1);
+      if(e.key==='ArrowRight') lbGo(1);
+    });
 
     function openLBPdf(title, file, page, total){
       LB_MODE='pdf-single'; LB_STATE={file,page,total,pdf:null};
@@ -695,19 +705,6 @@
     }
     document.getElementById('lbPrev').addEventListener('click',()=>lbGo(-1));
     document.getElementById('lbNext').addEventListener('click',()=>lbGo(1));
-    document.getElementById('lbClose').addEventListener('click',lbClose);
-    LB.addEventListener('click',e=>{ if(e.target===LB) lbClose(); });
-    document.addEventListener('keydown',e=>{
-      if(!LB.classList.contains('open')) return;
-      if(e.key==='Escape') lbClose();
-      if(e.key==='ArrowLeft') lbGo(-1);
-      if(e.key==='ArrowRight') lbGo(1);
-    });
-    window.addEventListener('resize', ()=>{
-      if(!LB.classList.contains('open')) return;
-      if(LB_MODE==='pdf-single') lbRenderPdf();
-      if(LB_MODE==='pdf-merged') lbRenderPdfMerged();
-    });
 
     /* Wire viewers + reveal on scroll */
     document.querySelectorAll('.media.deck[data-type="pdf-single"]').forEach(wirePdfSingle);
@@ -721,5 +718,6 @@
   </script>
 </body>
 </html>
+
 
 
