--- a/work.html
+++ b/work.html
@@ -301,11 +301,21 @@
     </section>
 
     <!-- ===================== PROJECTS / ARTIFACTS ===================== -->
-    <section class="wide projects" id="projects">
-      <div class="kicker">Projects &amp; Artifacts</div>
-      <h2 class="section-title" style="margin-top:4px;">Spotlight</h2>
+   <!-- Example: give your panels/sections ids -->
+<section class="wide projects" id="projects">
+  <div class="kicker">Projects &amp; Artifacts</div>
+  <h2 class="section-title" style="margin-top:4px;">Spotlight</h2>
 
-      <div class="panels">
+  <div class="panels">
+    <article class="panel" id="sage"> … </article>
+    <article class="panel" id="glance"> … </article>
+    <article class="panel" id="octavo"> … </article>
+    <article class="panel" id="claude-cortex"> … </article>
+
+    <!-- Keep the rest of your panels as-is -->
+  </div>
+</section>
+
         <!-- 1) Quokka -->
         <article class="panel">
           <div class="panel-grid">
