--- a/work.html
+++ b/work.html
@@ -307,10 +307,31 @@
   <h2 class="section-title" style="margin-top:4px;">Spotlight</h2>
 
   <div class="panels">
-    <article class="panel" id="sage"> … </article>
-    <article class="panel" id="glance"> … </article>
-    <article class="panel" id="octavo"> … </article>
-    <article class="panel" id="claude-cortex"> … </article>
+ <!-- 1) Quokka -->
+<article class="panel" id="quokka">
+  …
+</article>
+
+<!-- 2) Clear Clinical -->
+<article class="panel" id="clear-clinical">
+  …
+</article>
+
+<!-- 3) EY Workshop -->
+<article class="panel" id="ey-workshop">
+  …
+</article>
+
+<!-- 4) Policy Advocacy Day -->
+<article class="panel" id="advocacy-day">
+  …
+</article>
+
+<!-- 5) Magazine Feature -->
+<article class="panel" id="magazine">
+  …
+</article>
+
 
     <!-- Keep the rest of your panels as-is -->
   </div>
